# swift-markdown

./: .gitignore  .spi.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  Package.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-5.7.swift  README.md
.github/: CODEOWNERS  pull_request_template.md
DOCUMENTATION/: .gitignore  index.json  requirements.txt  resolve_refs.py  scrape.py
Documentation/: BlockDirectives.md
Playgrounds/Markdown.playground/: contents.xcplayground
Snippets/Formatting/: CondenseAutolinks.swift  CustomLinePrefix.swift  DefaultFormatting.swift  EmphasisMarkers.swift  MaximumWidth.swift  OrderedListNumerals.swift  PreferredHeadingStyle.swift  ThematicBreakCharacter.swift  UnorderedListMarker.swift  UseCodeFence.swift
Snippets/Parsing/: Explanation.md  ParseDocumentFile.swift  ParseDocumentString.swift  ParseFile.swift  ParseString.swift  test.md
Snippets/Querying/: ChildThrough.swift
Snippets/Rewriters/: RemoveElementKind.swift  ReplaceText.swift
Snippets/Visiting/: Explanation.md  MarkupCounter.swift
Snippets/Visitors/: XMLConverter.swift
Snippets/Walkers/: LinkCollector.swift
Sources/: CMakeLists.txt
Sources/CAtomic/: CAtomic.c  CMakeLists.txt
Sources/CAtomic/include/: CAtomic.h  module.modulemap
Sources/Markdown/: CMakeLists.txt
Sources/Markdown/Base/: ChildIndexPath.swift  DirectiveArgument.swift  Document.swift  LiteralMarkup.swift  Markup.swift  MarkupChildren.swift  MarkupData.swift  PlainTextConvertibleMarkup.swift  RawMarkup.swift
Sources/Markdown/Block Nodes/Block Container Blocks/: BlockDirective.swift  BlockQuote.swift  CustomBlock.swift  FootnoteDefinition.swift  ListItem.swift  OrderedList.swift  UnorderedList.swift
Sources/Markdown/Block Nodes/Block Container Blocks/Doxygen Commands/: DoxygenAbstract.swift  DoxygenDiscussion.swift  DoxygenNote.swift  DoxygenParam.swift  DoxygenParameter.swift  DoxygenReturns.swift
Sources/Markdown/Block Nodes/Inline Container Blocks/: Paragraph.swift
Sources/Markdown/Block Nodes/Leaf Blocks/: BlockMath.swift  CodeBlock.swift  HTMLBlock.swift  Heading.swift  ThematicBreak.swift
Sources/Markdown/Block Nodes/Tables/: Table.swift  TableBody.swift  TableCell.swift  TableCellContainer.swift  TableHead.swift  TableRow.swift
Sources/Markdown/BlockNodes/BlockContainerBlocks/: BlockDirective.swift
Sources/Markdown/BlockNodes/LeafBlocks/: HTMLBlock.swift
Sources/Markdown/BlockNodes/Tables/: Table.swift  TableBody.swift  TableHead.swift
Sources/Markdown/Infrastructure/: Replacement.swift  SourceIdentifier.swift  SourceLocation.swift
Sources/Markdown/Inline Nodes/Inline Containers/: Emphasis.swift  FootnoteReference.swift  Image.swift  InlineAttributes.swift  Link.swift  Strikethrough.swift  Strong.swift
Sources/Markdown/Inline Nodes/Inline Leaves/: CustomInline.swift  InlineCode.swift  InlineHTML.swift  InlineMath.swift  LineBreak.swift  SoftBreak.swift  SymbolLink.swift  Text.swift
Sources/Markdown/InlineNodes/Inline Leaves/: CustomInline.swift  Text.swift
Sources/Markdown/InlineNodes/InlineContainers/: Link.swift
Sources/Markdown/InlineNodes/InlineLeaves/: InlineCode.swift  InlineHTML.swift  SoftBreak.swift
Sources/Markdown/Interpretive Nodes/: Aside.swift
Sources/Markdown/InterpretiveNodes/: Aside.swift
Sources/Markdown/Markdown.docc/: Markdown.md  Parsing-Building-and-Modifying Markup-Trees.md  Snippets.md  Visitors-Walkers-and-Rewriters.md  snippets.md
Sources/Markdown/Markdown.docc/Markdown/: BlockDirectives.md  BlockMarkup.md  DoxygenCommands.md  FormatterAndOptions.md  Infrastructure.md  InlineMarkup.md  VisitMarkup.md
Sources/Markdown/Parser/: BlockDirectiveParser.swift  CommonMarkConverter.swift  ConvertOptions.swift  LazySplitLines.swift  MathParser.swift  ParseOptions.swift  RangeAdjuster.swift  RangerTracker.swift
Sources/Markdown/Rewriter/: MarkupRewriter.swift
Sources/Markdown/Structural Restrictions/: BasicBlockContainer.swift  BasicInlineContainer.swift  BlockContainer.swift  InlineContainer.swift  InlineMarkup.swift  ListItemContainer.swift
Sources/Markdown/StructuralRestrictions/: BasicBlockContainer.swift  BasicInlineContainer.swift  BlockMarkup.swift  InlineContainer.swift
Sources/Markdown/Utility/: AtomicCounter.swift  CharacterExtensions.swift  CollectionExtensions.swift  StringExtensions.swift
Sources/Markdown/Visitor/: MarkupVisitor.swift
Sources/Markdown/Walker/: MarkupWalker.swift
Sources/Markdown/Walker/Walkers/: HTMLFormatter.swift  HtmlFormatter.swift  MarkupFormatter.swift  MarkupTreeDumper.swift
Sources/markdown-tool/: MarkdownCommand.swift  main.swift
Sources/markdown-tool/Commands/: DumpTreeCommand.swift  FormatCommand.swift
Tests/: LinuxMain.swift
Tests/MarkdownTests/: XCTestManifests.swift
Tests/MarkdownTests/Base/: AtomicCounterTests.swift  HierarchyTests.swift  MarkupIdentifierTests.swift  MarkupTests.swift  ParsedRangePreservedAfterEditing.swift  PlainTextConvertibleMarkupTests.swift  RawMarkupTests.swift  RawMarkupToMarkupTests.swift  StableIdentifierTests.swift
Tests/MarkdownTests/Block Nodes/: BlockMathTests.swift  CodeBlockTests.swift  DocumentTests.swift  FootnoteTests.swift  HTMLBlockTests.swift  (+3 more)
Tools/: Package.swift
Tools/markdown-tool/: MarkdownCommand.swift
cmake/modules/: CMakeLists.txt  SwiftMarkdownConfig.cmake.in  SwiftSupport.cmake
docs/: index.html  metadata.json
docs/css/: documentation-topic.2d91f0b5.css  documentation-topic.39312a88.css  documentation-topic~topic~tutorials-overview.61ab0ea5.css  documentation-topic~topic~tutorials-overview.a2191abe.css  index.2eb9c3a4.css
docs/js/: documentation-topic.014e00d6.js  documentation-topic.f4e2212c.js  documentation-topic~topic~tutorials-overview.94e92f99.js  documentation-topic~topic~tutorials-overview.dd1bfa21.js  index.053a9cd0.js  index.8883f267.js  tutorials-overview.4b9a369d.js
(+1551 files in other folders)
